--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,11 @@ body {
 }
 
 input {
-	@apply rounded p-2 text-black;
+	@apply rounded bg-gray-700 p-2 text-center outline-none;
+}
+
+input[type="checkbox"] {
+	@apply w-4 accent-blue-700;
 }
 
 /* Video range slider */
